--- a/index.html
+++ b/index.html
@@ -13,24 +13,68 @@
     <script src="scripts.js"></script>
   </head>
   <body>
-    <h1>Scroll-to-draw</h1>
+    <canvas id="main-map" style="position: fixed"></canvas>
 
     <svg
+      width="530"
+      height="559"
+      viewBox="0 0 530 559"
+      fill="none"
       xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 100.6 107.6"
-      class="star-svg"
+      class="road-svg"
     >
       <path
-        fill="none"
-        stroke="white"
+        d="M1 557.5L106.5 468L79.5 365L174 378.5L250 335.5L269 248.5L293.5 105L309.5 40L393.5 105L458.5 2L529 59"
+        stroke="#13ACEE"
         stroke-width="2"
-        class="star-path"
-        d="M43.7,65.8L19.9,83.3c-2.9,1.9-5.1,3.2-7.9,3.2c-5.7,0-10.5-5.1-10.5-10.8
-            c0-4.8,3.8-8.2,7.3-9.8l27.9-12L8.8,41.4c-3.8-1.6-7.3-5.1-7.3-9.8c0-5.7,5.1-10.5,10.8-10.5c2.9,0,4.8,1,7.6,3.2l23.8,17.4
-            l-3.2-28.2c-1-6.7,3.5-12,9.8-12c6.3,0,10.8,5.1,9.8,11.7L57,41.8l23.8-17.4c2.9-2.2,5.1-3.2,7.9-3.2c5.7,0,10.5,4.8,10.5,10.5
-            c0,5.1-3.5,8.2-7.3,9.8L63.9,53.8l27.9,12c3.8,1.6,7.3,5.1,7.3,10.1c0,5.7-5.1,10.5-10.8,10.5c-2.5,0-4.8-1.3-7.6-3.2L57,65.8
-            l3.2,28.2c1,6.7-3.5,12-9.8,12c-6.3,0-10.8-5.1-9.8-11.7L43.7,65.8z"
+        stroke-dasharray="8 8"
+        class="road-path"
       />
     </svg>
+
+    <svg
+      viewBox="0 0 534 564"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+      class="road-svg"
+    >
+      <path
+        d="M3 561L108.5 471.5L81.5 368.5L176 382L252 339L271 252L295.5 108.5L311.5 43.5L395.5 108.5L460.5 5.5L531 62.5"
+        stroke="#FF0000"
+        stroke-width="7"
+        class="road-path"
+      />
+    </svg>
+
+    <div style="position: fixed" id="penn">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        version="1.1"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        class="marker-svg"
+        onclick="toggleDialog()"
+      >
+        <path
+          class="marker-path"
+          d="M12,11.5C10.62,11.5 9.5,10.38 9.5,9C9.5,7.62 10.62,6.5 12,6.5C13.38,6.5 14.5,7.62 14.5,9C14.5,10.38 13.38,11.5 12,11.5M12,2C8.13,2 5,5.13 5,9C5,14.25 12,22 12,22C12,22 19,14.25 19,9C19,5.13 15.87,2 12,2Z"
+        />
+      </svg>
+
+      <div
+        style="
+          position: absolute;
+          display: none;
+          bottom: 100%;
+          margin-bottom: 50px;
+          background: red;
+        "
+        id="penn_dialog"
+      >
+        <p>I love pi</p>
+      </div>
+    </div>
   </body>
 </html>
