8-16-21 night commit work

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         height="24"
         viewBox="0 0 24 24"
         class="marker-svg"
-        onclick="toggleDialog()"
+        onclick="document.getElementById('penn_dialog').style.display = 'block'"
       >
         <path
           class="marker-path"
